--- a/media.css
+++ b/media.css
@@ -23,13 +23,14 @@
 /* The photographs section */
 .images{
     position: relative;
-    margin-left: 20px;
-    margin-top: 20px;
+    margin-left: 50px;
+    margin-top: 30px;
     width:15%;
     clear: both;
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
+    overflow: hidden;
 }
 
 .images:hover {opacity: 0.7;}
@@ -102,8 +103,8 @@
 /* The Next Button */
 .next {
     position: absolute;
-    top: 200px;
-    right: 35px;
+    top: 300px;
+    right: 50px;
     color: #f1f1f1;
     font-size: 40px;
     font-weight: bold;
@@ -114,8 +115,8 @@
 /* The Previous Button */
 .prev {
     position: absolute;
-    top: 200px;
-    left: 35px;
+    top: 300px;
+    left: 50px;
     color: #f1f1f1;
     font-size: 40px;
     font-weight: bold;
