--- a/main.css
+++ b/main.css
@@ -63,8 +63,7 @@ background-size:cover;
 
 #my_photo {
     position: relative;
-    margin-left: 20px;
-    margin-top: 20px;
+    margin-left: 30px;
     width:25%;
     clear: both;
 }
@@ -80,7 +79,8 @@ background-size:cover;
        margin-left: 100px;
        margin-top: 20px;
        color: white;
-}
+       font-size: 30px;
+        }
 
 .bottom_nav{
     position: absolute;
@@ -95,6 +95,104 @@ background-size:cover;
 .bottom_nav ul li a{
     padding: 10px;
 }
+
+#info_about_me {
+    color:white;
+    margin-top: 30px;
+    margin-left: 30px;
+    font-size: 25px;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px black, 0 0 20px blue, 0 0 5px darkblue;
+    }
+
+/* for form---------------------------------------------*/
+#form_h1 {
+    color:white;
+    margin-left: 30px;
+}
+
+.myform{
+    margin-left:20px;
+}
+
+.myform label {
+    color:white;
+}
+
+#msg{
+    width:25%;
+    height: 100px;
+    padding: 10px 10px;
+    box-sizing: border-box;
+    border: 4px solid #ccc;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+	display: block;
+	outline: none;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-o-border-radius: 5px;
+	border-radius: 5px;
+}
+
+#name{
+    height:30px;
+    padding-left: 10px;
+    display: block;
+	overflow:hidden;
+	width:25%;
+	background:#e6e9ec;
+	border:none;
+	outline: none;
+	color:#9198A3;
+	font-size:1em;
+	resize: none;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-o-border-radius: 5px;
+	border-radius: 5px;
+}
+
+
+
+#email{
+    height:30px;
+    padding-left: 10px;
+    display: block;
+	overflow:hidden;
+	width:25%;
+	background:#e6e9ec;
+	border:none;
+	outline: none;
+	color:#9198A3;
+	font-size:1em;
+	resize: none;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-o-border-radius: 5px;
+	border-radius: 5px;
+}
+
+#btn-send{
+margin-top:30px;
+font-size:18px;    
+-webkit-border-radius: 5px;
+-moz-border-radius: 5px;
+-o-border-radius: 5px;
+border-radius: 5px;
+color:#000000;
+text-align:center;
+cursor:pointer;
+width:25%;
+height:40px;
+   }
+   
+#btn-send:hover{
+    background-color:#3CB371;
+    transition:0.4s;
+} 
+
 
 footer {
   color:black;
