--- a/main.css
+++ b/main.css
@@ -111,6 +111,10 @@ background-size:cover;
     margin-left: 30px;
 }
 
+.form_h3 {
+    color:white;
+    margin-left: 30px;
+}
 .myform{
     margin-left:20px;
 }
